link honey-glazed-salmon.html to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/honey-glazed-salmon.html">Honey Glazed Salmon</a>
 </body>
 </html>
