content added to honey-glazed-salmon.html

--- a/recipes/honey-glazed-salmon.html
+++ b/recipes/honey-glazed-salmon.html
@@ -7,5 +7,31 @@
 </head>
 <body>
     <h1>Honey Glazed Salmon</h1>
+    <p><img src="../Images/honey-glazed-salmon.jpg"</p>
+    <h2>Description</h2>
+    <p>"The easiest, most flavorful salmon you will ever make. And that browned butter lime sauce is to die for!"</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 salmon filets</li>
+        <li>Kosher salt and freshly ground black pepper, to taste</li>
+        <li>4 tablespoons all-purpose flour</li>
+        <li>4 tablespoons honey</li>
+        <li>2 tablespoons olive oil</li>
+        <li>2 teaspoons lime zest</li>
+        <li>6 tablespoons unsalted butter</li>
+        <li>2 cloves garlic, pressed</li>
+        <li>1 tablespoon honey</li>
+        <li>2 tablespoons freshly squeezed lime juice</li>
+        <li>Kosher salt and freshly ground black pepper, to taste</li> 
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+       <li>Preheat oven to 400 degrees F.</li>
+       <li>To make the browned butter lime sauce, melt butter in a medium saucepan over medium heat. Cook, whisking constantly, until the foam subsides and the butter begins to turn a golden brown, about 3 minutes. Stir in garlic, honey and lime juice, salt and pepper, to taste; set aside.</li>
+       <li>Season salmon with salt and pepper, to taste. Dredge each salmon filet with 1 tablespoon flour and drizzle with 1 tablespoon honey.</li>
+       <li>Heat olive oil in a large oven-proof skillet over medium high heat. Working in batches, add salmon to the skillet and sear both sides until golden brown, about 1-2 minutes per side.</li>
+       <li>Place into oven and bake until completely cooked through, about 8-10 minutes.</li>
+       <li>Serve immediately with browned butter lime sauce and lime zest, if desired.</li>
+    </ol>
 </body>
 </html>
