--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/honey-glazed-salmon.html">Honey Glazed Salmon</a>
+    <ul>
+        <li><a href="recipes/honey-glazed-salmon.html">Honey Glazed Salmon</a></li>
+        <li><a href="recipes/bbq-chicken.html">Slown Cooker BBQ Chicken</a></li>
+        <li><a href="recipes/tikka-masala.html">Tikka Masala Chicken</a></li>
+    </ul>
 </body>
 </html>
