add styles to all pages with style.css

--- a/recipes/honey-glazed-salmon.html
+++ b/recipes/honey-glazed-salmon.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Honey Glazed Salmon</h1>
@@ -33,5 +34,6 @@
        <li>Place into oven and bake until completely cooked through, about 8-10 minutes.</li>
        <li>Serve immediately with browned butter lime sauce and lime zest, if desired.</li>
     </ol>
+    <button onclick="history.back()">back</button>
 </body>
 </html>
