--- a/recipes/tikka-masala.html
+++ b/recipes/tikka-masala.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Tikka Masala Chicken</h1>
@@ -37,5 +38,6 @@
        <li>After 3 hours on high or 6 hours on low, the chicken should be fall-apart tender. Turn the slow cooker off, then add the heavy cream. Stir gently to combine the cream with the tomato sauce. Taste the sauce and add salt if needed.</li>
        <li>To serve, spoon the chicken and tomato sauce over cooked rice and top with fresh cilantro.</li>
     </ol>
+    <button onclick="history.back()">back</button>
 </body>
 </html>
