--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul id="index">
         <li><a href="recipes/honey-glazed-salmon.html">Honey Glazed Salmon</a></li>
-        <li><a href="recipes/bbq-chicken.html">Slown Cooker BBQ Chicken</a></li>
+        <li><a href="recipes/bbq-chicken.html">Slow Cooker BBQ Chicken</a></li>
         <li><a href="recipes/tikka-masala.html">Tikka Masala Chicken</a></li>
     </ul>
 </body>
