center text content on pages

--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Slow Cooker BBQ Chicken</h1>
-    <p><img src="../Images/bbq-chicken.jpg"</p>
+    <img src="../Images/bbq-chicken.jpg">
+    <div>
     <h2>Description</h2>
     <p>"You can have this tasty chicken in the slow cooker doing its own thing while you’re enjoying a lazy summer day."</p>
     <h2>Ingredients</h2>
-    <ul>
+  <ul>
         <li>2 tsp smoked paprika</li>
         <li>1 tsp garlic powder</li>
         <li>1/2 tsp salt</li>
@@ -29,6 +30,7 @@
        <li>After cooking, use two forks to shred the chicken. If the chicken does not easily pull apart with the forks, let it cook a little longer.</li>
        <li>Serve the pulled BBQ chicken on a bun, on nachos, over a baked potato, on pizza, or with your favorite meal.</li>
     </ol>
+</div>
     <button onclick="history.back()">back</button>
 </body>
 </html>
