--- a/recipes/honey-glazed-salmon.html
+++ b/recipes/honey-glazed-salmon.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Honey Glazed Salmon</h1>
-    <p><img src="../Images/honey-glazed-salmon.jpg"</p>
+    <img src="../Images/honey-glazed-salmon.jpg">
+    <div>
     <h2>Description</h2>
     <p>"The easiest, most flavorful salmon you will ever make. And that browned butter lime sauce is to die for!"</p>
     <h2>Ingredients</h2>
@@ -34,6 +35,7 @@
        <li>Place into oven and bake until completely cooked through, about 8-10 minutes.</li>
        <li>Serve immediately with browned butter lime sauce and lime zest, if desired.</li>
     </ol>
+</div>
     <button onclick="history.back()">back</button>
 </body>
 </html>
