--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul id="index">
+    <div><ul id="index">
         <li><a href="recipes/honey-glazed-salmon.html">Honey Glazed Salmon</a></li>
         <li><a href="recipes/bbq-chicken.html">Slow Cooker BBQ Chicken</a></li>
         <li><a href="recipes/tikka-masala.html">Tikka Masala Chicken</a></li>
-    </ul>
+    </ul></div>
 </body>
 </html>
