--- a/recipes/tikka-masala.html
+++ b/recipes/tikka-masala.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Tikka Masala Chicken</h1>
-    <p><img src="../Images/tikka-masala-chicken.jpg"</p>
-    <h2>Description</h2>
+    <img src="../Images/tikka-masala-chicken.jpg">
+    <div>
+        <h2>Description</h2>
     <p>"This Slow Cooker Chicken Tikka Masala boasts a rich and aromatic sauce, and tender juicy chicken."</p>
     <h2>Ingredients</h2>
     <ul>
@@ -38,6 +39,7 @@
        <li>After 3 hours on high or 6 hours on low, the chicken should be fall-apart tender. Turn the slow cooker off, then add the heavy cream. Stir gently to combine the cream with the tomato sauce. Taste the sauce and add salt if needed.</li>
        <li>To serve, spoon the chicken and tomato sauce over cooked rice and top with fresh cilantro.</li>
     </ol>
+</div>
     <button onclick="history.back()">back</button>
 </body>
 </html>
